--- a/hyperurl/Cargo.toml
+++ b/hyperurl/Cargo.toml
@@ -13,7 +13,7 @@ rust-crypto = "0.2.36"
 log = "0.4.14"
 pretty_env_logger = "0.4.0"
 
-hyper = { version = "1.0.0-rc.4", features = ["full"] }
+hyper = { version = "0.14", features = ["full"] }
 tokio = { version = "1", features = ["full"] }
 http-body-util = "0.1.0-rc.3"
 hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
