--- a/hyperurl/Cargo.toml
+++ b/hyperurl/Cargo.toml
@@ -6,12 +6,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-hyper = { version = "1.0.0-rc.3", features = ["full"] }
-tokio = { version = "1", features = ["full"] }
-http-body-util = "0.1.0-rc.2"
 serde_json = "1.0.64"
 futures = "0.3"
 lazy_static = "1.4.0"
 rust-crypto = "0.2.36"
 log = "0.4.14"
 pretty_env_logger = "0.4.0"
+
+hyper = { version = "0.14", features = ["full"] }
+tokio = { version = "1", features = ["full"] }
+http-body-util = "0.1.0-rc.3"
+hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
