--- a/d3_lifetimes/Cargo.toml
+++ b/d3_lifetimes/Cargo.toml
@@ -4,5 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "d3_lifetimes"
+path = "src/main.rs"
+
+[[bin]]
+name = "v2_closure"
+path = "src/v2_closure.rs"
 
 [dependencies]
