--- a/recipes/error_handling/Cargo.toml
+++ b/recipes/error_handling/Cargo.toml
@@ -15,3 +15,4 @@ path = "src/main.rs"
 [dependencies]
 serde = { version = "1.0.130", features = ["derive"] }
 serde_json = "1.0.64"
+failure = { version = "0.1.8", features = ["derive"] }
