--- a/atomic_and_locks/2_atomics/Cargo.toml
+++ b/atomic_and_locks/2_atomics/Cargo.toml
@@ -10,6 +10,10 @@ name = "progress_report"
 path = "src/lib.rs"
 
 [[bin]]
+name = "lazy_initialization"
+path = "src/lazy.rs"
+
+[[bin]]
 name = "atomics_main"
 path = "src/main.rs"
 
