development: atomic_and_locks: atomics: fetch-and-modify

--- a/atomic_and_locks/2_atomics/Cargo.toml
+++ b/atomic_and_locks/2_atomics/Cargo.toml
@@ -14,6 +14,10 @@ name = "lazy_initialization"
 path = "src/lazy.rs"
 
 [[bin]]
+name = "fetchnmod"
+path = "src/fetchnmod.rs"
+
+[[bin]]
 name = "atomics_main"
 path = "src/main.rs"
 
