--- a/atomic_and_locks/2_atomics/Cargo.toml
+++ b/atomic_and_locks/2_atomics/Cargo.toml
@@ -18,7 +18,12 @@ name = "fetchnmod"
 path = "src/fetchnmod.rs"
 
 [[bin]]
+name = "progress_report_multithread"
+path = "src/progress_report_multithread.rs"
+
+[[bin]]
 name = "atomics_main"
 path = "src/main.rs"
 
 [dependencies]
+num_cpus = "1.13"
