development: atomic_and_locks: atomics: statistics

--- a/atomic_and_locks/2_atomics/Cargo.toml
+++ b/atomic_and_locks/2_atomics/Cargo.toml
@@ -22,6 +22,10 @@ name = "progress_report_multithread"
 path = "src/progress_report_multithread.rs"
 
 [[bin]]
+name = "statistics"
+path = "src/statistics.rs"
+
+[[bin]]
 name = "atomics_main"
 path = "src/main.rs"
 
