--- a/microservices/hyper-microservice/Cargo.toml
+++ b/microservices/hyper-microservice/Cargo.toml
@@ -11,3 +11,4 @@ hyper = { version = "1.0.0-rc.4", features = ["full"] }
 tokio = { version = "1", features = ["full"] }
 http-body-util = "0.1.0-rc.3"
 hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
+slab = "0.4.2"
