--- a/microservices/hyper-microservice/Cargo.toml
+++ b/microservices/hyper-microservice/Cargo.toml
@@ -12,3 +12,5 @@ tokio = { version = "1", features = ["full"] }
 http-body-util = "0.1.0-rc.3"
 hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
 slab = "0.4.2"
+lazy_static = "1.4.0"
+regex = "1.5.4"
