--- a/microservices/hyper-microservice/Cargo.toml
+++ b/microservices/hyper-microservice/Cargo.toml
@@ -7,9 +7,8 @@ edition = "2021"
 
 [dependencies]
 # hyper = { version = "0.14", features = ["full"] }
-hyper = { version = "1.0.0-rc.4", features = ["full"] }
+hyper = { version = "0.14.27", features = ["full"] }
 tokio = { version = "1", features = ["full"] }
-http-body-util = "0.1.0-rc.3"
 hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
 slab = "0.4.2"
 lazy_static = "1.4.0"
